<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <!-- title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_portfolio_title"
            style="@style/dialog_add_textView_title"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="10dp"
            android:hint="@string/dialog_add_portfolio_edit_title"
            android:inputType="text"
            android:background="@drawable/custom_edit_text" />
    </LinearLayout>

    <!-- contents -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_portfolio_contents"
            style="@style/dialog_add_textView_title"/>

        <EditText
            android:id="@+id/et_contents"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingLeft="10dp"
            android:hint="@string/dialog_add_portfolio_edit_contents"
            android:textAlignment="textStart"
            android:background="@drawable/custom_edit_text" />
    </LinearLayout>

    <!-- url -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_portfolio_url"
            style="@style/dialog_add_textView_title" />

        <EditText
            android:id="@+id/et_url"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="10dp"
            android:hint="@string/dialog_add_portfolio_edit_url"
            android:inputType="text"
            android:background="@drawable/custom_edit_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_add_portfolio_notAdded_image"/>

    <CheckBox
        android:id="@+id/chk_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_add_portfolio_default_image"/>

    <Button
        android:id="@+id/btn_image"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_add_portfolio_button_image"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_round"
        android:backgroundTint="@color/user_button"/>

</LinearLayout>