<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/iv_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_default"/>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listView_CardPortfolio_title"
                android:layout_marginTop="5dp"
                style="@style/portfolio_textView_title"/>

            <TextView
                android:id="@+id/tv_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listView_CardPortfolio_contents"
                style="@style/portfolio_textView_contents" />

            <TextView
                android:id="@+id/tv_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listView_CardPortfolio_link"
                android:autoLink="web"
                style="@style/portfolio_textView_link"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>