<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true">

    <!-- main screen -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" >

                <LinearLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <!-- user Image -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:cardCornerRadius="40dp"
                        android:layout_marginLeft="2dp"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_edit_text">

                        <ImageView
                            android:id="@+id/toolbar_user_image"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_listview_user"/>

                    </androidx.cardview.widget.CardView>

                    <!-- userName -->
                    <TextView
                        android:id="@+id/toolbar_userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toolbar_userName"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        style="@style/toolbar_textView_userName"/>


                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- duplicate-->
<!--        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator-->
<!--            android:id="@+id/indicator_main"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="10dp"-->
<!--            app:dotsColor="@color/user_progress"-->
<!--            app:dotsCornerRadius="10dp"-->
<!--            app:dotsSize="10dp"-->
<!--            app:dotsSpacing="5dp"-->
<!--            app:dotsStrokeColor="@color/user_progress"-->
<!--            app:dotsStrokeWidth="1dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />-->

        <FrameLayout
            android:id="@+id/frame_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomTabLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <!-- duplicate-->
<!--
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicator_main" />-->

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/bottomTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabMode="fixed"
            app:tabIconTint="@color/menu_bottom_select"
            app:tabSelectedTextColor="@color/menu_bottom_select"
            app:tabIndicatorGravity="top"
            app:tabIndicatorColor="@color/user_button">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_tab_item_home"
                android:icon="@drawable/ic_menu_bottom_home" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_tab_item_add"
                android:icon="@drawable/ic_menu_bottom_add" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMain_tab_item_delete"
                android:icon="@drawable/ic_menu_bottom_delete"/>

        </com.google.android.material.tabs.TabLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- drawer screen -->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        android:background="@color/whiteColor"
        android:fitsSystemWindows="false"
        android:layout_gravity="start">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">

            <ImageButton
                android:id="@+id/imgbtn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:background="@color/white"
                android:src="@drawable/ic_drawer_button_back"/>

            <!-- 화면 부분 -->
            <TextView
                android:text="@string/drawer_menu_screen"
                style="slideBar_textView_size"
                android:textColor="@color/user_grey"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drawer_menu_home"
                    style="slideBar_textView_size"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/ic_drawer_button_home"
                    android:drawablePadding="10dp"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"/>

                <!-- 여기 리사이클러뷰 or 리스트뷰-->
                <ListView
                    android:id="@+id/lv_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <!-- 화면 부분 -->

            <View
                android:layout_width="300dp"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/user_grey"/>

            <!-- 설정 부분 -->
            <TextView
                android:text="@string/drawer_menu_setting"
                style="slideBar_textView_size"
                android:textColor="@color/user_grey"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tv_portfolio_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drawer_menu_add"
                    style="slideBar_textView_size"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/ic_drawer_button_portfolio_add"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tv_portfolio_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drawer_menu_delete"
                    style="slideBar_textView_size"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/ic_drawer_button_portfolio_delete"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:layout_margin="10dp"/>

            </LinearLayout>
            <!-- 설정 부분 -->

            </LinearLayout>
        </ScrollView>

    </com.google.android.material.navigation.NavigationView>
    <!-- drawer screen -->

</androidx.drawerlayout.widget.DrawerLayout>